--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>ff</title>
-
+	<title>ME</title>
+<h1>HELLOW GUSY .. HERE'S A LITTLE ABOUT ME ...</h1>
+ 
 	<p>kk</p>
 </head>
 <body>
