--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>ME</title>
-<h1>HELLOW GUSY .. HERE'S A LITTLE ABOUT ME ...</h1>
+<h1 style="color: tomato;">HELLOW GUSY .. HERE'S A LITTLE ABOUT ME ...</h1>
  
-	<p>kk</p>
+	
 	<style>
 	body{
          background-image: url('https://freerangestock.com/sample/139879/abstract-technology-background--big-data-concept-.jpg');
